# C-plus-plus-Snake-Game

./: CMakeLists.txt  README.md
scripts/: SnakeObj.cpp  SnakeObj.hpp  application.cpp  application.hpp  food.cpp  food.hpp  foodImage.hpp  game.cpp  game.hpp  gameOver.hpp  main.cpp  square.hpp
